--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
       "react-app/jest"
     ]
   },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
